--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ next-env.d.ts
 INTEGRATION_STATUS.md
 RETROACTIVE_ACTIVITY_GUIDE.md
 CROSS_TAB_INTEGRATION_GUIDE.md
+ENHANCED_ACTIVITY_TRACKING.md
+ENHANCED_GOAL_TRACKING.md
+GITHUB_SETUP.md
